# bevy-tablestakes

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
assets/: README.md  kittytown.ldtk
assets/sfx/: README.md
assets/sprites/: sPlayer.aseprite  sPlayerAttackSlash.aseprite  sPlayerHurt.aseprite  sPlayerRoll.aseprite  sPlayerRun.aseprite  sShadow.aseprite  sSlime.aseprite  sSlimeAttack.aseprite  sSlimeDie.aseprite  sSlimeHurt.aseprite
src/: assets_setup.rs  behaviors.rs  camera.rs  char_animation.rs  collision.rs  collision_debug.rs  compass.rs  debug_settings.rs  entity_states.rs  goofy_time.rs  hellow.rs  input.rs  junk.rs  main.rs  movement.rs  phys_space.rs  player_states.rs  render.rs  sounds.rs  space_lookup.rs  toolbox.rs  util_countup_timer.rs  walls.rs
src/char_animation/: assets.rs  components.rs  mod.rs  systems.rs  types.rs
src/junkbox/: hellow.rs  junk.rs  mod.rs
src/toolbox/: countup_timer.rs  mod.rs
