[package]
name = "bevy-tablestakes"
description = "hey!!! I'm walkin here!!!"
authors = ["Nick Fagerlund", "Motorsprite Chaos Industries"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
asefile = "0.3.5"
image = "0.23.14" # match asefile's dep
bevy = { version = "0.9.1", features = [
    "dynamic",
    # Tracy breaks protocol versions in patch releases, so check Cargo.lock.
    # - table @ https://lib.rs/crates/tracing-tracy
    # Bevy 0.8.1: Tracy 0.8.1 (coincidince)
    # Bevy 0.9.1: Tracy 0.9
    "trace_tracy",
] }
bevy-inspector-egui = "0.14.0"
bevy_ecs_tilemap = "0.9.0"
bevy_ecs_ldtk = "0.5.0"
bevy_spatial = { version = "0.4.0", features = ["rstar"]}

# bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", rev = "02b044b99" }
# bevy_ecs_ldtk = { git = "https://github.com/nfagerlund/bevy_ecs_ldtk.git", rev = "1bfe05f" }
bevy_mod_debugdump = "0.6.0" # neat: https://github.com/jakobhellermann/bevy_mod_debugdump

[patch.crates-io]
# bevy = { path = "../bevy" }
# ^^ local for testing bugfixes
bevy = { git = "https://github.com/nfagerlund/bevy", rev = "92b4a2b06" }
bevy_app = { git = "https://github.com/nfagerlund/bevy", rev = "92b4a2b06" }
bevy_ecs = { git = "https://github.com/nfagerlund/bevy", rev = "92b4a2b06" }
bevy_render = { git = "https://github.com/nfagerlund/bevy", rev = "92b4a2b06" }
# ^^ nf/dec22-personal-0.9.1: fix log suppression, add TimerMode::CountUp

# Per https://bevy-cheatbook.github.io/pitfalls/performance.html:
# medium-optimize this crate's own debug builds
[profile.dev]
opt-level = 3

# hella optimize all the engine dependencies
[profile.dev.package."*"]
opt-level = 3
