[package]
name = "bevy-tablestakes"
description = "hey!!! I'm walkin here!!!"
authors = ["Nick Fagerlund", "Motorsprite Chaos Industries"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
asefile = "0.3.5"
image = "0.23.14" # match asefile's dep
bevy = { version = "0.13.2", features = [
    "dynamic_linking",
    "mp3",
    "file_watcher",    # Not desirable for release builds, btw
    # Tracy breaks protocol versions in patch releases, so check Cargo.lock.
    # - Support table @ https://lib.rs/crates/tracing-tracy
    #   Bevy 0.12.1: Tracy 0.9.1
    # - I install my own builds at /usr/local/bin/tracy-profiler-VERSION
    # - To build, cd to `profiler/build/unix` in the tracy repo and `make release`.
    "trace_tracy",
] }
bevy-inspector-egui = "0.24.0"
# bevy_ecs_tilemap = "0.11.0"
# bevy_ecs_ldtk = "0.8.0"
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", rev = "e4f3cc66811" }
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk.git", rev = "617b108dfc" }
rstar = "0.9.3"
# RNG stuff: these crates work together.
bevy_rand = "0.6.0"
bevy_prng = { version = "0.6.0", features = ["rand_xoshiro"] }
rand = "0.8.5"
rand_xoshiro = "0.6.0"

bevy_mod_debugdump = "0.10.0" # neat: https://github.com/jakobhellermann/bevy_mod_debugdump

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", rev = "e4f3cc66811" }
# bevy = { path = "../bevy" }
# ^^ local for testing bugfixes
# bevy = { git = "https://github.com/nfagerlund/bevy", rev = "92b4a2b06" }
# bevy_app = { git = "https://github.com/nfagerlund/bevy", rev = "92b4a2b06" }
# bevy_ecs = { git = "https://github.com/nfagerlund/bevy", rev = "92b4a2b06" }
# bevy_render = { git = "https://github.com/nfagerlund/bevy", rev = "92b4a2b06" }
# ^^ nf/dec22-personal-0.9.1: fix log suppression, add TimerMode::CountUp

# Per https://bevy-cheatbook.github.io/pitfalls/performance.html:
# medium-optimize this crate's own debug builds
[profile.dev]
opt-level = 3

# hella optimize all the engine dependencies
[profile.dev.package."*"]
opt-level = 3
